_styles.css
html {
  font-family: arial;
  max-width: 8.5in;
  font-size: 10pt;
  line-height: 1.2;
  margin: auto;
}

body {
  background-color: #f5f5ff;
}

li, p {
  margin-block-start: 0.4rem;
  margin-block-end: 0.4rem;
}

ul {
  padding-inline-start: 16px;
}

h2 {
  color: #08519C;
  margin-block-start: 0.75em;
  margin-block-end: 0.4em;
}

#headshot {
  height: 75px;
  vertical-align: top;
}

.image-cropper {
  width: 125px;
  height: 125px;
  margin-right: 8%;
  position: relative;
  overflow: hidden;
  border-radius: 50%;
  border-style: solid;
  border-width: 1px;
}

.headshot-pic {
  display: inline;
  margin: 0 auto;
  margin-left: 8%;
  height: 100%;
  width: auto;
  transform: scale(1.25);
}

#header {
  vertical-align: top;
}

#name {
  font-size: 3rem;
  vertical-align: top;
  color: #08519C;
}

#contact {
  font-size: 0.8rem;
  vertical-align: bottom;
}

#contact p {
  margin-block-start: 0.3rem;
  margin-block-end: 0.3rem;
}

#image-heatmap {
  object-fit: contain;
  object-position: left top;
  margin-left: -8px;
}

#col-skills {
  text-align: right;
}

#col-skills h2, p {
  text-align: left;
}

